# vggt-plane-detection-openMVS

./: README.md  final.ipynb
openMVS/: CMakeLists.txt  vcpkg.json
openMVS/apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.cpp
openMVS/apps/InterfaceCOLMAP/: CMakeLists.txt  InterfaceCOLMAP.cpp
openMVS/apps/InterfaceMVSNet/: CMakeLists.txt
openMVS/apps/InterfaceMetashape/: CMakeLists.txt  InterfaceMetashape.cpp
openMVS/apps/InterfacePolycam/: CMakeLists.txt
openMVS/apps/ReconstructMesh/: CMakeLists.txt  ReconstructMesh.cpp
openMVS/apps/RefineMesh/: CMakeLists.txt
openMVS/apps/Tests/: CMakeLists.txt  Tests.cpp
openMVS/apps/TextureMesh/: CMakeLists.txt
openMVS/apps/TransformScene/: CMakeLists.txt  TransformScene.cpp
openMVS/apps/Viewer/: CMakeLists.txt  Common.h  Scene.cpp  Viewer.cpp  Window.cpp  Window.h
openMVS/docker/: Dockerfile  buildFromScratch.sh  buildInDocker.sh
openMVS/libs/Common/: Config.h  Ray.h  Ray.inl  Types.h  Types.inl  Util.cpp  Util.h  UtilCUDA.cpp
openMVS/libs/IO/: CMakeLists.txt  Common.h  Image.cpp  Image.h  ImageJXL.cpp  ImageJXL.h
openMVS/libs/MVS/: CMakeLists.txt  Camera.h  DepthMap.cpp  DepthMap.h  Image.h  Mesh.cpp  Mesh.h  PatchMatchCUDA.cpp  PointCloud.cpp  PointCloud.h  PythonWrapper.cpp  RectsBinPack.h  Scene.cpp  Scene.h  SceneDensify.cpp  SceneDensify.h  SceneReconstruct.cpp  SceneRefine.cpp  SceneTexture.cpp  SemiGlobalMatcher.cpp
openMVS/libs/Math/: LBP.h
openMVS/libs/Math/IBFS/: IBFS.h
openMVS/scripts/python/: ImageSegmentation.py  ImportDMAPs.py  MvgMvsPipeline.py  MvsDMAP2TSDF.py  MvsReadDMAP.py  MvsReadMVS.py  MvsScalablePipeline.py  MvsUtils.py
vggt/: demo_colmap (1).py  demo_colmap.py  plane_detection_v2.py  requirements.docx  test_vggt.py  vggt_to_colmap.py
vggt/vggt/models/: vggt.py
vggt/vggt/utils/: load_fn.py
